packages/svelte/tests/validator/samples/inline-new-class-2/input.svelte
<script>
	class Foo {
		foo = $state(0)
	}
	const a = new Foo();
</script>
