packages/svelte/tests/compiler-errors/samples/legacy-no-const-update/main.svelte
<script>
	const a = createCounter();
	a++;
</script>
